# fnp

./: .gitignore  Dockerfile  combo.py  main.py  mainbase.py  newcaptcha.py  newmain.py  prelastsol.py  pyproject.toml  ruc.py  ruc_v2.py  rucaptcha.py  sel.py  sol.py  sol10.py  sol10_1.py  sol12.py  sol12_1.py  sol2.py
chrome_profile/: Local State
chrome_profile/Default/: DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
chrome_profile/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000009  f_00000a  f_00000b  f_00000c  (+2 more)
chrome_profile/Default/DawnGraphiteCache/: index
chrome_profile/Default/DawnWebGPUCache/: index
chrome_profile/Default/Extension Rules/: LOG
chrome_profile/Default/Extension Scripts/: LOG
chrome_profile/Default/Extension State/: LOG  LOG.old
chrome_profile/Default/GCM Store/: LOG  LOG.old
chrome_profile/Default/GPUCache/: index
chrome_profile/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
chrome_profile/Default/Session Storage/: LOG  LOG.old
chrome_profile/Default/Sessions/: Session_13412699040382104  Session_13412699130338929  Tabs_13412699040700266  Tabs_13412699130721855
chrome_profile/Default/Site Characteristics Database/: LOG  LOG.old
chrome_profile/Default/WebStorage/: QuotaManager
chrome_profile/Default/shared_proto_db/: LOG  LOG.old
chrome_profile/GrShaderCache/: data_1  index
chrome_profile/GraphiteDawnCache/: data_1  index
chrome_profile/ShaderCache/: data_1  index
(+33 files in other folders)
