[project]
name = "fnp"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "playwright (>=1.57.0,<2.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "playwright-stealth (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
